--- a/forms/package.json
+++ b/forms/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "author": "David Guttman <david@guttman.io> (http://davidguttman.com/)",
   "devDependencies": {
-    "react-scripts": "0.9.5",
-    "concurrently": "3.4.0"
+    "concurrently": "3.4.0",
+    "react-scripts": "0.9.5"
   },
   "dependencies": {
     "prop-types": "15.6.0",
